osrm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm-deployment
  labels:
    app: osrm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: osrm
  template:
    metadata:
      labels:
        app: osrm
    spec:
      containers:
      - name: osrm
        image: ghcr.io/rapour/osrm-backend-dubai-baked:v0.1.0
        command: 
        - osrm-routed
        - --algorithm
        - ch
        - /data/dubai.osrm
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /route/v1/driving/55.157032,25.100368;55.207672,25.057198?steps=false
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /route/v1/driving/55.157032,25.100368;55.207672,25.057198?steps=false
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            cpu: "800m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
