osrm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osrm-service
spec:
  selector:
    app: osrm
  ports:
  - name: route-service
    protocol: TCP
    port: 80
    targetPort: 5000
